--- a/caesar/index.html
+++ b/caesar/index.html
@@ -10,6 +10,8 @@
 			width: 250px;
 			overflow:scroll;
 			flex: 1;
+			width: 90%;
+			margin: 0 auto;
 		}
 
 		body, .input {
@@ -28,12 +30,19 @@
 			flex-direction: column;
 		}
 
+		@media screen and (max-width: 800px) {
+			body {
+				flex-direction: column;
+			}
+		}
+
 		
 	</style>
 </head>
 <body>
 	<div class="input">
 	<header>
+		<a href="/index.html">Home</a>
 		<h1>Caesar Cipher</h1>
 	</header>
 
