--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>SECRYPT - Cryptography</title>
-	<style>
-		body {
-			font-family: monospace;
-		}
-	</style>
+	<link rel="stylesheet" href="/style.css">
+	<meta name="theme-color" content="#263238">
+
 </head>
 <body>
+	<main>
 	<header>
 		<h1>SECRYPT - Cryptography</h1>
 	</header>
-	<main>
 		<ul class="topics">
 			<li><a href="caesar/index.html">Caesar Cipher</a></li>
 		</ul>
