--- a/caesar/index.html
+++ b/caesar/index.html
@@ -4,7 +4,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Caesar Cipher</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://hjfitz.github.io/secrypt/style.css">
+	<link rel="stylesheet" href="/style.css">
 	<meta name="theme-color" content="#263238">
 	<style>
 
