--- a/caesar/index.html
+++ b/caesar/index.html
@@ -14,7 +14,7 @@
 		}
 		#output {
 			border: solid 1px grey;
-			overflow:hidden;
+			overflow:auto;
 			flex: 1;
 			width: 90%;
 			margin: 0 auto;
