--- a/frequency/index.html
+++ b/frequency/index.html
@@ -26,6 +26,10 @@
 </head>
 <body>
 	<div class="input">
+        	<header>
+                    <a href="/index.html">Home</a>
+                    <h1>Frequency Analysis</h1>
+                </header>
 		<textarea id="in" cols="30" rows="10"></textarea>
 		<button id="sub"></button>
 	</div>
