--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	</header>
 		<ul class="topics">
 			<li><a href="caesar/index.html">Caesar Cipher</a></li>
+			<li><a href="frequency/index.html">Frequency analyser</a></li>
 		</ul>
 	</main>
 </body>
